fix: transform the labels/origins in parse_text so that the frontend can have the right data
fixes a duplicate naming in types.py that was creating confusions
